Projet/iimp.output
Terminaux inutilisés dans la grammaire

   Af


État 16 conflits: 1 décalage/réduction


Grammaire

    0 $accept: prog $end

    1 prog: C

    2 E: E Pl T
    3  | E Mo T
    4  | T

    5 T: T Mu F
    6  | F

    7 F: '(' E ')'
    8  | I
    9  | V

   10 C0: Sk
   11   | Se
   12   | Wh E Do C0
   13   | '(' C ')'
   14   | If E Th C El C0

   15 C: C Se C0
   16  | C0
   17  | '(' C0 ')'


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 7 13 17
')' (41) 7 13 17
error (256)
V (258) 9
I (259) 8
Af (260)
Sk (261) 10
Se (262) 11 15
If (263) 14
Th (264) 14
Wh (265) 12
Do (266) 12
Pl (267) 2
Mo (268) 3
Mu (269) 5
El (270) 14


Non-terminaux, suivis des règles où ils apparaissent

$accept (18)
    à gauche: 0
prog (19)
    à gauche: 1, à droite: 0
E (20)
    à gauche: 2 3 4, à droite: 2 3 7 12 14
T (21)
    à gauche: 5 6, à droite: 2 3 4 5
F (22)
    à gauche: 7 8 9, à droite: 5 6
C0 (23)
    à gauche: 10 11 12 13 14, à droite: 12 14 15 16 17
C (24)
    à gauche: 15 16 17, à droite: 1 13 14 15


État 0

    0 $accept: . prog $end

    Sk   décalage et aller à l'état 1
    Se   décalage et aller à l'état 2
    If   décalage et aller à l'état 3
    Wh   décalage et aller à l'état 4
    '('  décalage et aller à l'état 5

    prog  aller à l'état 6
    C0    aller à l'état 7
    C     aller à l'état 8


État 1

   10 C0: Sk .

    $défaut  réduction par utilisation de la règle 10 (C0)


État 2

   11 C0: Se .

    $défaut  réduction par utilisation de la règle 11 (C0)


État 3

   14 C0: If . E Th C El C0

    V    décalage et aller à l'état 9
    I    décalage et aller à l'état 10
    '('  décalage et aller à l'état 11

    E  aller à l'état 12
    T  aller à l'état 13
    F  aller à l'état 14


État 4

   12 C0: Wh . E Do C0

    V    décalage et aller à l'état 9
    I    décalage et aller à l'état 10
    '('  décalage et aller à l'état 11

    E  aller à l'état 15
    T  aller à l'état 13
    F  aller à l'état 14


État 5

   13 C0: '(' . C ')'
   17 C: '(' . C0 ')'

    Sk   décalage et aller à l'état 1
    Se   décalage et aller à l'état 2
    If   décalage et aller à l'état 3
    Wh   décalage et aller à l'état 4
    '('  décalage et aller à l'état 5

    C0  aller à l'état 16
    C   aller à l'état 17


État 6

    0 $accept: prog . $end

    $end  décalage et aller à l'état 18


État 7

   16 C: C0 .

    $défaut  réduction par utilisation de la règle 16 (C)


État 8

    1 prog: C .
   15 C: C . Se C0

    Se  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 1 (prog)


État 9

    9 F: V .

    $défaut  réduction par utilisation de la règle 9 (F)


État 10

    8 F: I .

    $défaut  réduction par utilisation de la règle 8 (F)


État 11

    7 F: '(' . E ')'

    V    décalage et aller à l'état 9
    I    décalage et aller à l'état 10
    '('  décalage et aller à l'état 11

    E  aller à l'état 20
    T  aller à l'état 13
    F  aller à l'état 14


État 12

    2 E: E . Pl T
    3  | E . Mo T
   14 C0: If E . Th C El C0

    Th  décalage et aller à l'état 21
    Pl  décalage et aller à l'état 22
    Mo  décalage et aller à l'état 23


État 13

    4 E: T .
    5 T: T . Mu F

    Mu  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 4 (E)


État 14

    6 T: F .

    $défaut  réduction par utilisation de la règle 6 (T)


État 15

    2 E: E . Pl T
    3  | E . Mo T
   12 C0: Wh E . Do C0

    Do  décalage et aller à l'état 25
    Pl  décalage et aller à l'état 22
    Mo  décalage et aller à l'état 23


État 16

   16 C: C0 .
   17  | '(' C0 . ')'

    ')'  décalage et aller à l'état 26

    ')'       [réduction par utilisation de la règle 16 (C)]
    $défaut  réduction par utilisation de la règle 16 (C)


État 17

   13 C0: '(' C . ')'
   15 C: C . Se C0

    Se   décalage et aller à l'état 19
    ')'  décalage et aller à l'état 27


État 18

    0 $accept: prog $end .

    $défaut  accepter


État 19

   15 C: C Se . C0

    Sk   décalage et aller à l'état 1
    Se   décalage et aller à l'état 2
    If   décalage et aller à l'état 3
    Wh   décalage et aller à l'état 4
    '('  décalage et aller à l'état 28

    C0  aller à l'état 29


État 20

    2 E: E . Pl T
    3  | E . Mo T
    7 F: '(' E . ')'

    Pl   décalage et aller à l'état 22
    Mo   décalage et aller à l'état 23
    ')'  décalage et aller à l'état 30


État 21

   14 C0: If E Th . C El C0

    Sk   décalage et aller à l'état 1
    Se   décalage et aller à l'état 2
    If   décalage et aller à l'état 3
    Wh   décalage et aller à l'état 4
    '('  décalage et aller à l'état 5

    C0  aller à l'état 7
    C   aller à l'état 31


État 22

    2 E: E Pl . T

    V    décalage et aller à l'état 9
    I    décalage et aller à l'état 10
    '('  décalage et aller à l'état 11

    T  aller à l'état 32
    F  aller à l'état 14


État 23

    3 E: E Mo . T

    V    décalage et aller à l'état 9
    I    décalage et aller à l'état 10
    '('  décalage et aller à l'état 11

    T  aller à l'état 33
    F  aller à l'état 14


État 24

    5 T: T Mu . F

    V    décalage et aller à l'état 9
    I    décalage et aller à l'état 10
    '('  décalage et aller à l'état 11

    F  aller à l'état 34


État 25

   12 C0: Wh E Do . C0

    Sk   décalage et aller à l'état 1
    Se   décalage et aller à l'état 2
    If   décalage et aller à l'état 3
    Wh   décalage et aller à l'état 4
    '('  décalage et aller à l'état 28

    C0  aller à l'état 35


État 26

   17 C: '(' C0 ')' .

    $défaut  réduction par utilisation de la règle 17 (C)


État 27

   13 C0: '(' C ')' .

    $défaut  réduction par utilisation de la règle 13 (C0)


État 28

   13 C0: '(' . C ')'

    Sk   décalage et aller à l'état 1
    Se   décalage et aller à l'état 2
    If   décalage et aller à l'état 3
    Wh   décalage et aller à l'état 4
    '('  décalage et aller à l'état 5

    C0  aller à l'état 7
    C   aller à l'état 17


État 29

   15 C: C Se C0 .

    $défaut  réduction par utilisation de la règle 15 (C)


État 30

    7 F: '(' E ')' .

    $défaut  réduction par utilisation de la règle 7 (F)


État 31

   14 C0: If E Th C . El C0
   15 C: C . Se C0

    Se  décalage et aller à l'état 19
    El  décalage et aller à l'état 36


État 32

    2 E: E Pl T .
    5 T: T . Mu F

    Mu  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 2 (E)


État 33

    3 E: E Mo T .
    5 T: T . Mu F

    Mu  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 3 (E)


État 34

    5 T: T Mu F .

    $défaut  réduction par utilisation de la règle 5 (T)


État 35

   12 C0: Wh E Do C0 .

    $défaut  réduction par utilisation de la règle 12 (C0)


État 36

   14 C0: If E Th C El . C0

    Sk   décalage et aller à l'état 1
    Se   décalage et aller à l'état 2
    If   décalage et aller à l'état 3
    Wh   décalage et aller à l'état 4
    '('  décalage et aller à l'état 28

    C0  aller à l'état 37


État 37

   14 C0: If E Th C El C0 .

    $défaut  réduction par utilisation de la règle 14 (C0)
